# Nasdaq-auto-trading-bot

./: .gitignore  README.md  test_orchestrator.py
backend/: pyproject.toml
backend/src/nq_trading_agents/: config.py  orchestrator.py  server.py
backend/src/nq_trading_agents/application/ports/: __init__.py  broker_port.py
backend/src/nq_trading_agents/domain/entities/: __init__.py  trade.py
backend/src/nq_trading_agents/engines/: agent_prompts.py  ai_advisory.py  candle_scanner.py  data_adapter.py  external_data.py  hegelian_engine.py  market_structure.py  signature_trade.py  weekly_structure.py
backend/src/nq_trading_agents/infrastructure/brokers/: browser_auth.py  paper_broker.py  tradovate_broker.py
backend/src/nq_trading_agents/models/: schemas.py
backend/src/smart_money_bot/: config.py  main.py  orchestrator.py  server.py
backend/src/smart_money_bot/application/agents/: __init__.py  smart_money_agent.py
backend/src/smart_money_bot/application/ports/: __init__.py  broker_port.py  market_data_port.py
backend/src/smart_money_bot/domain/entities/: __init__.py  candlestick.py  position.py
backend/src/smart_money_bot/domain/services/: risk_manager.py
backend/src/smart_money_bot/engines/: candle_scanner.py  hegelian_engine.py  market_structure.py  signature_trade.py  weekly_structure.py
backend/src/smart_money_bot/infrastructure/brokers/: __init__.py  browser_auth.py  paper_broker.py  tradovate_broker.py
backend/src/smart_money_bot/infrastructure/data/: __init__.py  (+1 more)
backend/src/smart_money_bot/models/: __init__.py  schemas.py
(+34 files in other folders)
