[project]
name = "smart-money-bot"
version = "0.1.0"
description = "NAS100 Smart Money auto-trading bot"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.0",
  "requests>=2.32.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
